tests/ui/loops/issue-43162.rs
fn foo() -> bool {
    //~^ ERROR E0308
    break true; //~ ERROR E0268
}

fn main() {
    break {}; //~ ERROR E0268
}
